--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <script>
         let counter = 0;
         const button = document.getElementById("btn");
+        // 2. span을 불러와서 html의 변경된 click값을 출력하기
+        const span = document.querySelector("span");
         function handleClick(){
-            // 클릭하면 counter를 가져오기
+            // 1. 클릭하면 counter를 가져오기
             counter = counter + 1;
+            // 3. span.innerText를 새로운 counter로 두기
+            span.innerText = counter;
         }
         button.addEventListener('click', handleClick);
     </script>
