바닐라js로 완성시킨 click & counter

--- a/index.html
+++ b/index.html
@@ -20,3 +20,12 @@
         button.addEventListener('click', handleClick);
     </script>
 </html>
+
+<!-- 과정요약 -->
+<!-- 
+    1. html을 만든다
+    2. javascript에서 html을 가져온다.
+    3. event를 감지한다(addEventListener을 통해)
+    4. counter를 통해 데이터를 업데이트한다.
+    5. html도 업데이트한다 (span.innerText = `Total clicks: ${counter}`; 를 통해서)
+ -->
