--- a/index.html
+++ b/index.html
@@ -8,65 +8,53 @@
     <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel">
         const root = document.getElementById('root');
-        // 오래된 방법
-        // const h3 = React.createElement(
-        //     'h3', 
-        //     {
-        //         id: "title",
-        //         onMouseEnter: () => console.log("mouse enter"),
-        //     },
-        //     "Hello i am a span"
+        // 화살표 함수 적용 전
+        // const Title = (
+        //     <h3 id="title" onMouseEnter={() => console.log("mouse enter")} 
+        //     >
+        //         Hello i am a span
+        //     </h3>
         // );
-
-        //새로운 방법 = JSX (앞으로 쓰게 될 방법)
-        const Title = (
+        // 화살표 함수 적용 후(Container에 Title의 모든 요소를 전달하기 위해)
+        const Title = ()=> (
             <h3 id="title" onMouseEnter={() => console.log("mouse enter")} 
             >
                 Hello i am a span
             </h3>
         );
-
-        // 오래된 방법
-        // const btn = React.createElement(
-        //     'button',
-        //     { 
-        //         onClick: ()=> console.log("im clicked"),
-        //         style: {
-        //             backgroundColor: "skyblue",
-        //         },
-        //     }, 
-        //     "Click me"
-        // );
-
-        //새로운 방법 = JSX (앞으로 쓰게 될 방법)
-        const Button = (
-            <button 
+        function Button(){
+            return(
+                <button 
                 onClick={()=> console.log("im clicked")}
                 style={{
                     backgroundColor:"skyblue"
                 }}
-            >
+                >
                 Click me
-            </button>
+                </button>
+            );
+        }
+        
+        // 1. 아래와 같이 JSX 방식으로 변경하기
+        // const container = React.createElement('div', null, [Title, Button]);
+
+        // 2. JSX 방식
+        // const Container = <div>Title Button</div> 
+        // 이렇게 하면 단순히 Title 글자만 출력된다. Title의 모든 요소들을 포함시키기 위해서는 Title을 함수로 만들어준다.(화살표함수 ()=>)
+        // const Title = ()=> () 또는 function Title(){return}
+
+        // 3. 최종변경
+        // 4-2 함수형으로 바꿔주기
+        const Container = ()=> (
+            <div>
+                {/*컴포넌트의 첫글자는 무조건 대문자로*/}
+                <Title />
+                <Button />
+            </div>
         );
-        const container = React.createElement('div', null, [Title, Button]);
-        ReactDOM.render(container, root);
+
+        // ReactDOM.render(Container, root);
+        // 4-1 JSX 방식으로 바꿔주기 (에러남 why? Container를 함수형으로 바꾸지 않았기 때문에!)
+        ReactDOM.render(<Container />, root);
     </script>
 </html>
-
-<!-- 리액트js
-    const btn = React.createElement(
-            'button',
-            { 
-                onClick: ()=> console.log("im clicked")
-            }, 
-            "Click me"
-        ); "Click me");
-
-    바닐라js
-    <button id="btn">Click me</button>
-    const button = document.getElementById("btn");
-    button.addEventListener('click', handleClick);
-
-    * 바닐라js에서 'click' 이벤트 -> 리액트js에서 onClick
- -->
