--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         // 4-2 함수형으로 바꿔주기
         const Container = ()=> (
             <div>
+                <button>hiiiii</button> {/*html태그로만 인식*/}
                 {/*컴포넌트의 첫글자는 무조건 대문자로*/}
                 <Title />
                 <Button />
