--- a/index.html
+++ b/index.html
@@ -1,61 +1,23 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <div id="root"></div>
-    </body>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="text/babel">
-        const root = document.getElementById('root');
-        // 화살표 함수 적용 전
-        // const Title = (
-        //     <h3 id="title" onMouseEnter={() => console.log("mouse enter")} 
-        //     >
-        //         Hello i am a span
-        //     </h3>
-        // );
-        // 화살표 함수 적용 후(Container에 Title의 모든 요소를 전달하기 위해)
-        const Title = ()=> (
-            <h3 id="title" onMouseEnter={() => console.log("mouse enter")} 
-            >
-                Hello i am a span
-            </h3>
-        );
-        function Button(){
-            return(
-                <button 
-                onClick={()=> console.log("im clicked")}
-                style={{
-                    backgroundColor:"skyblue"
-                }}
-                >
-                Click me
-                </button>
-            );
-        }
-        
-        // 1. 아래와 같이 JSX 방식으로 변경하기
-        // const container = React.createElement('div', null, [Title, Button]);
-
-        // 2. JSX 방식
-        // const Container = <div>Title Button</div> 
-        // 이렇게 하면 단순히 Title 글자만 출력된다. Title의 모든 요소들을 포함시키기 위해서는 Title을 함수로 만들어준다.(화살표함수 ()=>)
-        // const Title = ()=> () 또는 function Title(){return}
-
-        // 3. 최종변경
-        // 4-2 함수형으로 바꿔주기
-        const Container = ()=> (
-            <div>
-                <button>hiiiii</button> {/*html태그로만 인식*/}
-                {/*컴포넌트의 첫글자는 무조건 대문자로*/}
-                <Title />
-                <Button />
-            </div>
-        );
-
-        // ReactDOM.render(Container, root);
-        // 4-1 JSX 방식으로 바꿔주기 (에러남 why? Container를 함수형으로 바꾸지 않았기 때문에!)
-        ReactDOM.render(<Container />, root);
-    </script>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>index.html</title>
+</head>
+<body>
+    <div id="root"></div>
+</body>
+<script src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
+<script src="https://unpkg.com/react-dom@18.0.0/umd/react-dom.production.min.js"></script>
+<script>
+    const root = document.getElementById("root");
+    const span = React.createElement(
+        "span", 
+        {id:"sexy-span" , style : {color : 'red'}},
+        "Hello, i'am a span"
+    );
+    ReactDOM.render(span, root); // span을 사용자에게 보여준다.
+</script>
 </html>
