--- a/vanilla.html
+++ b/vanilla.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <span>Total clicks: 0</span>
-        <button id="btn">Click me</button>
-    </body>
-    <script>
-        let counter = 0;
-        const button = document.getElementById("btn");
-        // 2. span을 불러와서 html의 변경된 click값을 출력하기
-        const span = document.querySelector("span");
-        function handleClick(){
-            // 1. 클릭하면 counter를 가져오기
-            counter = counter + 1;
-            // 3. span.innerText를 새로운 counter로 두기
-            // span.innerText = counter;
-            // 4. span이 글자포함 전부 업데이트 된다.
-            span.innerText = `Total clicks: ${counter}`;
-        }
-        button.addEventListener('click', handleClick);
-    </script>
-</html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+</head>
+<body>
+    <span>Total clicks : 0</span>
+    <button id="btn">Click me</button>
 
-<!-- 과정요약 -->
-<!-- 
-    1. html을 만든다
-    2. javascript에서 html을 가져온다.
-    3. event를 감지한다(addEventListener을 통해)
-    4. counter를 통해 데이터를 업데이트한다.
-    5. html도 업데이트한다 (span.innerText = `Total clicks: ${counter}`; 를 통해서)
- -->
+</body>
+<script>
+    let counter = 0;
+    const button = document.getElementById("btn");
+    const span = document.querySelector("span");
+    function handleClick(){
+        // console.log("i have been clicked");
+        counter = counter + 1;
+        // span.innerText = counter;
+        span.innerText = `Total clicks : ${counter}`
+    }
+    button.addEventListener("click", handleClick);
+</script>
+</html>
