--- a/index.html
+++ b/index.html
@@ -13,11 +13,25 @@
 <script src="https://unpkg.com/react-dom@18.0.0/umd/react-dom.production.min.js"></script>
 <script>
     const root = document.getElementById("root");
-    const span = React.createElement(
-        "span", 
-        {id:"sexy-span" , style : {color : 'red'}},
+    const h3 = React.createElement(
+        "h3", 
+        {
+            onMouseEnter: () => console.log("mouse enter"),
+        },
         "Hello, i'am a span"
     );
-    ReactDOM.render(span, root); // span을 사용자에게 보여준다.
+    const btn = React.createElement(
+        "button", 
+        {
+            onClick: () => console.log("i am clicked"),
+            style: {
+                backgroundColor: "red",
+            }
+        },
+        "Click me"
+    );
+    // ReactDOM.render(span, root); // span을 사용자에게 보여준다.
+    const container = React.createElement("div", null, [h3, btn]);
+    ReactDOM.render(container, root);
 </script>
 </html>
