--- a/index.html
+++ b/index.html
@@ -21,14 +21,7 @@
         >
             Hello, i'am a title
         </h3>
-    // const h3 = React.createElement(
-    //     "h3", 
-    //     {
-    //         onMouseEnter: () => console.log("mouse enter"),
-            //    style.background.color = "red";
-    //     },
-    //     "Hello, i'am a h3"
-    // );
+
     const Button = 
         <button 
             style={{
@@ -38,18 +31,12 @@
         >
             Click me
         </button>
-    // const btn = React.createElement(
-    //     "button", 
-    //     {
-    //         onClick: () => console.log("i am clicked"),
-    //         style: {
-    //             backgroundColor: "red",
-    //         }
-    //     },
-    //     "Click me"
-    // );
-    // ReactDOM.render(span, root); // span을 사용자에게 보여준다.
-    const container = React.createElement("div", null, [Title, Button]);
-    ReactDOM.render(container, root);
+
+    const Container =
+        <div>
+            Title
+            Button
+        </div>
+    ReactDOM.render(Container, root);
 </script>
 </html>
