--- a/index.html
+++ b/index.html
@@ -14,47 +14,20 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     const root = document.getElementById("root");
-    const Title = () => (
-        <h3 
-            id= "title" 
-            onMouseEnter={() => console.log("mouse enter")}
-        >
-            Hello, i'am a title
-        </h3>
-    )
-    /* 위 코드 원래 모습 */
-    /*
-    function Title(){
-        return (
-            <h3 
-            id= "title" 
-            onMouseEnter={() => console.log("mouse enter")}
-            >
-                Hello, i'am a title
-            </h3>
-        );
+    let counter = 0;
+    function countUp(){
+        counter = counter + 1;
+        render();
     }
-    */
-
-
-    const Button = () =>(
-        <button 
-            style={{
-                backgroundColor: "tomato",
-            }}
-            onClick={() => console.log("i am clicked")}
-        >
-            Click me
-        </button>
-    )
-
+    function render(){
+        ReactDOM.render(<Container />, root);
+    }
     const Container= () =>(
-        // 컴포넌트의 첫글자는 무조건 "대문자"
         <div>
-            <Title />
-            <Button />
+            <h3>Total clicks : {counter}</h3>
+            <button onClick= {countUp} >Click me!</button>
         </div>
     );
-    ReactDOM.render(<Container />, root);
+    render();
 </script>
 </html>
