--- a/index.html
+++ b/index.html
@@ -14,20 +14,42 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     const root = document.getElementById("root");
-    let counter = 0;
-    function countUp(){
-        counter = counter + 1;
-        render();
+    
+    function App(){
+        /*
+        let counter = 0;
+        function countUp(){
+            counter = counter + 1;
+        }
+
+        이거랑
+
+        const data = React.useState(0);
+        console.log(data);
+
+        랑 같은 식이다.
+        */
+
+        // 1
+        // const data = React.useState();
+        // console.log(data); // [undefined, ƒ] : undefined->data, ƒ->data를 바꿀때 사용하는 함수
+        // -----------------------------//
+        // 2
+        // const data = React.useState(0); // 초기값 0으로 설정
+        // console.log(data); // [0, ƒ] -> [초기값0, data의 값을 바꿀수 있는 함수]
+        // const counter = data[0];
+        // const modifier = data[1];
+        // -----------------------------//
+        // 3
+        const [counter, modifier] = React.useState(0);
+
+        return(
+            <div>
+                <h3>Total clicks : 0</h3>
+                <button>Click me!</button>
+            </div>
+        );
     }
-    function render(){
-        ReactDOM.render(<Container />, root);
-    }
-    const Container= () =>(
-        <div>
-            <h3>Total clicks : {counter}</h3>
-            <button onClick= {countUp} >Click me!</button>
-        </div>
-    );
-    render();
+    ReactDOM.render(<App />, root);
 </script>
 </html>
