--- a/index.html
+++ b/index.html
@@ -16,37 +16,19 @@
     const root = document.getElementById("root");
     
     function App(){
-        /*
-        let counter = 0;
-        function countUp(){
+        // counter : 우리가 담으려는 data 값
+        // modifier : 이 data값을 바꿀때 사용할 요소
+        let [counter, modifier] = React.useState(0);
+        const onClick = () => {
             counter = counter + 1;
+            console.log(counter);
         }
-
-        이거랑
-
-        const data = React.useState(0);
-        console.log(data);
-
-        랑 같은 식이다.
-        */
-
-        // 1
-        // const data = React.useState();
-        // console.log(data); // [undefined, ƒ] : undefined->data, ƒ->data를 바꿀때 사용하는 함수
-        // -----------------------------//
-        // 2
-        // const data = React.useState(0); // 초기값 0으로 설정
-        // console.log(data); // [0, ƒ] -> [초기값0, data의 값을 바꿀수 있는 함수]
-        // const counter = data[0];
-        // const modifier = data[1];
-        // -----------------------------//
-        // 3
-        const [counter, modifier] = React.useState(0);
+        
 
         return(
             <div>
                 <h3>Total clicks : 0</h3>
-                <button>Click me!</button>
+                <button onClick={onClick}>Click me!</button>
             </div>
         );
     }
