--- a/index.html
+++ b/index.html
@@ -18,16 +18,23 @@
     function App(){
         // counter : 우리가 담으려는 data 값
         // modifier : 이 data값을 바꿀때 사용할 요소
-        let [counter, modifier] = React.useState(0);
+        /*
+        const [counter, modifier] = React.useState(0);
         const onClick = () => {
-            counter = counter + 1;
-            console.log(counter);
-        }
-        
+            // counter = counter + 1;
+            // console.log(counter);
+            modifier(100);
+        };
+        */
+        // 보통 counter(자기가 정할 수 있음), setCounter 이런식으로 사용함
+        const [counter, setCounter] = React.useState(0);
+        const onClick = () => {
+            setCounter(counter + 1);
+        };           
 
         return(
             <div>
-                <h3>Total clicks : 0</h3>
+                <h3>Total clicks : {counter} </h3>
                 <button onClick={onClick}>Click me!</button>
             </div>
         );
