--- a/index.html
+++ b/index.html
@@ -16,17 +16,27 @@
     const root = document.getElementById("root");
     
     function App(){
-        const [counter, setCounter] = React.useState(0);
-        const onClick = () => {
-            // setCounter(counter + 1); // 아래코드와 같음
-            setCounter((current) => current + 1);
-
-        };           
-
+        const [minutes, setMinutes] = React.useState();
+        const onChange = (event) => {
+            // console.log(event.target.value);
+            setMinutes(event.target.value);
+        }
         return(
+            // label을 input에 연결시키기 위해 label에 for속성을 이용해 input의 아이디값으로 맞춰준다.
             <div>
-                <h3>Total clicks : {counter} </h3>
-                <button onClick={onClick}>Click me!</button>
+                <h1>Super Converter</h1>
+
+                <label htmlFor="minutes">Minutes</label>
+                <input 
+                    value={minutes} 
+                    id="minutes" 
+                    placeholder="Minutes" 
+                    type="number"
+                    onChange={onChange}
+                />
+                <h4>You want to convert {minutes}</h4>
+                <label htmlFor="hours">Hours</label>
+                <input id="hours" placeholder="Hours" type="number" />
             </div>
         );
     }
