--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             setMinutes(event.target.value);
         }
         return(
-            // label을 input에 연결시키기 위해 label에 for속성을 이용해 input의 아이디값으로 맞춰준다.
             <div>
                 <h1>Super Converter</h1>
 
@@ -36,10 +35,24 @@
                 />
                 <h4>You want to convert {minutes}</h4>
                 <label htmlFor="hours">Hours</label>
-                <input id="hours" placeholder="Hours" type="number" />
+                <input id="hours" placeholder="Hours" type="number" /> 
             </div>
         );
     }
     ReactDOM.render(<App />, root);
 </script>
 </html>
+
+<!--
+    state를 세팅해주는 방법
+    1. 직접 값을 설정해주는 것 : ()에 원하는 숫자 입력해주기
+    setCounter(5);
+
+    2. 함수를 전달하기
+    현재 state를 바탕으로 다음 state를 계산해내고 싶다면,
+    아래 함수를 사용해야한다.
+    setCounter((current) => current + 1);
+
+    current : 언제나 현재 state인 현재 counter값
+    (예상치 못한 counter의 업데이트가 어디선가 일어났다고 해도, 혼동을 방지함
+-->
