--- a/index.html
+++ b/index.html
@@ -16,26 +16,45 @@
     const root = document.getElementById("root");
     
     function App(){
-        const [minutes, setMinutes] = React.useState();
+        const [minutes, setMinutes] = React.useState(0);
+        const [flipped, setFlipped] = React.useState(false);
         const onChange = (event) => {
             // console.log(event.target.value);
             setMinutes(event.target.value);
         }
+        const reset = () => setMinutes(0);
+        // const onFlip = () => setFlipped(!filped);
+        const onFlip = () => setFlipped((current) => !current);
         return(
             <div>
                 <h1>Super Converter</h1>
-
-                <label htmlFor="minutes">Minutes</label>
-                <input 
+                <div>
+                    <label htmlFor="minutes">Minutes</label>
+                    <input 
                     value={minutes} 
                     id="minutes" 
                     placeholder="Minutes" 
                     type="number"
                     onChange={onChange}
-                />
-                <h4>You want to convert {minutes}</h4>
-                <label htmlFor="hours">Hours</label>
-                <input id="hours" placeholder="Hours" type="number" /> 
+                    // disabled={flipped === true}
+                    disabled={flipped}
+                    />
+                </div>
+                <div>
+                    <label htmlFor="hours">Hours</label>
+                    <input
+                        value={Math.round(minutes / 60)} 
+                        id="hours" 
+                        placeholder="Hours" 
+                        type="number"
+                        onChange={onChange}
+                        // disabled={flipped === false}
+                        disabled={!flipped}
+                        // flipped === false라면, hours input는 disabled된다.
+                    /> 
+                </div>
+                <button onClick={reset} >Reset</button>
+                <button onClick={onFlip} >Flip</button>
             </div>
         );
     }
