--- a/index.html
+++ b/index.html
@@ -16,45 +16,48 @@
     const root = document.getElementById("root");
     
     function App(){
-        const [minutes, setMinutes] = React.useState(0);
-        const [flipped, setFlipped] = React.useState(false);
+        const [amount, setAmount] = React.useState(0);
+        const [inverted, setInverted] = React.useState(false);
         const onChange = (event) => {
             // console.log(event.target.value);
-            setMinutes(event.target.value);
+            setAmount(event.target.value);
         }
-        const reset = () => setMinutes(0);
-        // const onFlip = () => setFlipped(!filped);
-        const onFlip = () => setFlipped((current) => !current);
+        const reset = () => setAmount(0);
+        // const onInvert = () => setInverted(!filped);
+        const onInvert = () => {
+            reset();
+            setInverted((current) => !current);
+        };
         return(
             <div>
                 <h1>Super Converter</h1>
                 <div>
                     <label htmlFor="minutes">Minutes</label>
                     <input 
-                    value={minutes} 
+                    value={inverted ? amount * 60 : amount} 
                     id="minutes" 
                     placeholder="Minutes" 
                     type="number"
                     onChange={onChange}
-                    // disabled={flipped === true}
-                    disabled={flipped}
+                    // disabled={inverted === true}
+                    disabled={inverted}
                     />
                 </div>
                 <div>
                     <label htmlFor="hours">Hours</label>
                     <input
-                        value={Math.round(minutes / 60)} 
+                        value={inverted ? amount : Math.round(amount / 60)} 
                         id="hours" 
                         placeholder="Hours" 
                         type="number"
                         onChange={onChange}
-                        // disabled={flipped === false}
-                        disabled={!flipped}
-                        // flipped === false라면, hours input는 disabled된다.
+                        // disabled={inverted === false}
+                        disabled={!inverted}
+                        // inverted === false라면, hours input는 disabled된다.
                     /> 
                 </div>
                 <button onClick={reset} >Reset</button>
-                <button onClick={onFlip} >Flip</button>
+                <button onClick={onInvert} >{inverted ?  "Turn back" : "Invert"}</button>
             </div>
         );
     }
