--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     const root = document.getElementById("root");
-    
-    function App(){
+    function MinutesToHours(){
         const [amount, setAmount] = React.useState(0);
         const [inverted, setInverted] = React.useState(false);
         const onChange = (event) => {
@@ -30,7 +29,6 @@
         };
         return(
             <div>
-                <h1>Super Converter</h1>
                 <div>
                     <label htmlFor="minutes">Minutes</label>
                     <input 
@@ -58,6 +56,33 @@
                 </div>
                 <button onClick={reset} >Reset</button>
                 <button onClick={onInvert} >{inverted ?  "Turn back" : "Invert"}</button>
+            </div>
+        );
+    }
+    function KmToMiles(){
+        return <h3>KM 2 M</h3>
+    }
+    function App(){
+        // index : 데이터
+        // setIndex : 데이터를 수정하는 함수
+        const [index, setIndex] = React.useState("-1");
+        const onSelect = (event) =>{
+            // console.log(event.target.value);
+            setIndex(event.target.value);
+        }
+        console.log("render with ", index);
+        return(
+            <div>
+                <h1>Super Converter</h1>
+                <select value={index} onChange={onSelect}>
+                    <option value="-1">Select your units</option>
+                    <option value="0">Minutes & Hours</option>
+                    <option value="1">Km & Miles</option>
+                </select>
+                <hr />
+                {index === "-1" ? "please select your units" : null }
+                {index === "0" ? <MinutesToHours /> : null }
+                {index === "1" ? <KmToMiles /> : null }
             </div>
         );
     }
