--- a/index.html
+++ b/index.html
@@ -13,79 +13,37 @@
 <script src="https://unpkg.com/react-dom@18.0.0/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-    const root = document.getElementById("root");
-    function MinutesToHours(){
-        const [amount, setAmount] = React.useState(0);
-        const [inverted, setInverted] = React.useState(false);
-        const onChange = (event) => {
-            // console.log(event.target.value);
-            setAmount(event.target.value);
-        }
-        const reset = () => setAmount(0);
-        // const onInvert = () => setInverted(!filped);
-        const onInvert = () => {
-            reset();
-            setInverted((current) => !current);
-        };
-        return(
-            <div>
-                <div>
-                    <label htmlFor="minutes">Minutes</label>
-                    <input 
-                    value={inverted ? amount * 60 : amount} 
-                    id="minutes" 
-                    placeholder="Minutes" 
-                    type="number"
-                    onChange={onChange}
-                    // disabled={inverted === true}
-                    disabled={inverted}
-                    />
-                </div>
-                <div>
-                    <label htmlFor="hours">Hours</label>
-                    <input
-                        value={inverted ? amount : Math.round(amount / 60)} 
-                        id="hours" 
-                        placeholder="Hours" 
-                        type="number"
-                        onChange={onChange}
-                        // disabled={inverted === false}
-                        disabled={!inverted}
-                        // inverted === false라면, hours input는 disabled된다.
-                    /> 
-                </div>
-                <button onClick={reset} >Reset</button>
-                <button onClick={onInvert} >{inverted ?  "Turn back" : "Invert"}</button>
-            </div>
+
+    function Btn({ text , big}){
+    // function Btn(props){
+        // console.log(props);
+        console.log(text, big);
+        return (
+            <button style={{
+                backgroundColor : "tomato",
+                color : "white",
+                padding : " 10px 20px",
+                border : 0,
+                borderRadius : 10,
+                fontSize : big ? 18 : 2
+                }}>
+                {/*{props.text}*/}
+                {text}
+            </button>
         );
     }
-    function KmToMiles(){
-        return <h3>KM 2 M</h3>
+    function ConfirmBtn(){
+        return <button>Confirm</button>;
     }
     function App(){
-        // index : 데이터
-        // setIndex : 데이터를 수정하는 함수
-        const [index, setIndex] = React.useState("-1");
-        const onSelect = (event) =>{
-            // console.log(event.target.value);
-            setIndex(event.target.value);
-        }
-        console.log("render with ", index);
         return(
             <div>
-                <h1>Super Converter</h1>
-                <select value={index} onChange={onSelect}>
-                    <option value="-1">Select your units</option>
-                    <option value="0">Minutes & Hours</option>
-                    <option value="1">Km & Miles</option>
-                </select>
-                <hr />
-                {index === "-1" ? "please select your units" : null }
-                {index === "0" ? <MinutesToHours /> : null }
-                {index === "1" ? <KmToMiles /> : null }
+                <Btn text="Save Change" big={true}/>
+                <Btn text="Continue"/>
             </div>
-        );
-    }
+            );
+        }
+    const root = document.getElementById("root");
     ReactDOM.render(<App />, root);
 </script>
 </html>
