--- a/index.html
+++ b/index.html
@@ -9,44 +9,41 @@
 <body>
     <div id="root"></div>
 </body>
-<script src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
-<script src="https://unpkg.com/react-dom@18.0.0/umd/react-dom.production.min.js"></script>
+<!-- <script src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
+<script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
+<script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
+<script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
 
-    function Btn({ text, changeValue }){
-    // function Btn(props){
-        // console.log(props);
-        // console.log(text, big);
-        console.log(text, "was rendered");
+    function Btn({ text , fontSize = 50 }){
         return (
             <button 
-                onClick = {changeValue}
                 style={{
                     backgroundColor : "tomato",
                     color : "white",
                     padding : " 10px 20px",
                     border : 0,
                     borderRadius : 10,
+                    // fontSize : fontSize,
+                    fontSize,
                 }}>
-                {/*{props.text}*/}
                 {text}
             </button>
         );
     }
-    function ConfirmBtn(){
-        return <button>Confirm</button>;
+    Btn.propTypes = {
+        text: PropTypes.string.isRequired,
+        fontSize: PropTypes.number,
     }
-    const MemorizesBtn = React.memo(Btn);
     function App(){
-        const [value, setValue] = React.useState("Save Change");
-        const changeValue = () => setValue("Revert Changes");
         return(
             <div>
-                {/*<Btn text={value} changeValue={changeValue} />
-                <Btn text="Continue"/>*/}
-                <MemorizesBtn text={value} changeValue={changeValue} />
-                <MemorizesBtn text="Continue"/>
+                <Btn text="Save Changes" fontSize={18} />
+                <Btn text="할말이없네" />
             </div>
             );
         }
