#2.1 Before React : 241014 ReStart

--- a/vanilla.html
+++ b/vanilla.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
+  <body>
     <span>Total clicks : 0</span>
     <button id="btn">Click me</button>
-
-</body>
-<script>
+  </body>
+  <script>
     let counter = 0;
     const button = document.getElementById("btn");
     const span = document.querySelector("span");
-    function handleClick(){
-        // console.log("i have been clicked");
-        counter = counter + 1;
-        // span.innerText = counter;
-        span.innerText = `Total clicks : ${counter}`
+    function handleClick() {
+      counter = counter + 1;
+      span.innerText = `Total clicks : ${counter}`;
     }
     button.addEventListener("click", handleClick);
-</script>
+  </script>
 </html>
