--- a/index.html
+++ b/index.html
@@ -1,67 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index.html</title>
-</head>
-<body>
-    <div id="root"></div>
-</body>
-<!-- <script src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
-<script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
-<script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
-<script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-<script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<script type="text/babel">
-
-    function Btn({ text , fontSize = 50 }){
-        return (
-            <button 
-                style={{
-                    backgroundColor : "tomato",
-                    color : "white",
-                    padding : " 10px 20px",
-                    border : 0,
-                    borderRadius : 10,
-                    // fontSize : fontSize,
-                    fontSize,
-                }}>
-                {text}
-            </button>
-        );
-    }
-    Btn.propTypes = {
-        text: PropTypes.string.isRequired,
-        fontSize: PropTypes.number,
-    }
-    function App(){
-        return(
-            <div>
-                <Btn text="Save Changes" fontSize={18} />
-                <Btn text="할말이없네" />
-            </div>
-            );
-        }
-    const root = document.getElementById("root");
-    ReactDOM.render(<App />, root);
-</script>
+<html>
+  <body></body>
+  <script src="https://www.unpkg.com/react@18.3.1/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.production.min.js"></script>
+  <script></script>
 </html>
-
-<!--
-    state를 세팅해주는 방법
-    1. 직접 값을 설정해주는 것 : ()에 원하는 숫자 입력해주기
-    setCounter(5);
-
-    2. 함수를 전달하기
-    현재 state를 바탕으로 다음 state를 계산해내고 싶다면,
-    아래 함수를 사용해야한다.
-    setCounter((current) => current + 1);
-
-    current : 언제나 현재 state인 현재 counter값
-    (예상치 못한 counter의 업데이트가 어디선가 일어났다고 해도, 혼동을 방지함
--->
