--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     const root = document.getElementById("root");
     const span = React.createElement(
       "span",
-      { id: "cutyspan", style: { color: "blue" } },
+      null, // { id: "cutyspan", style: { color: "blue" } },
       "Hello i am a span"
     );
-    ReactDOM.render(span, root); // 사용자에게 보여준다.
+    const btn = React.createElement("button", null, "Click me");
+    const container = React.createElement("div", null, [span, btn]);
+    ReactDOM.render(container, root);
   </script>
 </html>
