--- a/index.html
+++ b/index.html
@@ -7,13 +7,25 @@
   <script src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.production.min.js"></script>
   <script>
     const root = document.getElementById("root");
-    const span = React.createElement(
-      "span",
-      null, // { id: "cutyspan", style: { color: "blue" } },
-      "Hello i am a span"
+    const h3 = React.createElement(
+      "h3",
+      {
+        onMouseEnter: () => console.log("mouse enter"),
+        id: "hi",
+      },
+      "Hello i am a h3"
     );
-    const btn = React.createElement("button", null, "Click me");
-    const container = React.createElement("div", null, [span, btn]);
+    const btn = React.createElement(
+      "button",
+      {
+        onClick: () => console.log("i am clicked"),
+        style: {
+          backgroundColor: "tomato",
+        },
+      },
+      "Click me"
+    );
+    const container = React.createElement("div", null, [h3, btn]);
     ReactDOM.render(container, root);
   </script>
 </html>
