--- a/index.html
+++ b/index.html
@@ -5,27 +5,25 @@
   </body>
   <script src="https://www.unpkg.com/react@18.3.1/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.production.min.js"></script>
-  <script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
     const root = document.getElementById("root");
-    const h3 = React.createElement(
-      "h3",
-      {
-        onMouseEnter: () => console.log("mouse enter"),
-        id: "hi",
-      },
-      "Hello i am a h3"
+    const Title = (
+      <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
+        Hello i am a title
+      </h3>
     );
-    const btn = React.createElement(
-      "button",
-      {
-        onClick: () => console.log("i am clicked"),
-        style: {
+    const Button = (
+      <button
+        style={{
           backgroundColor: "tomato",
-        },
-      },
-      "Click me"
+        }}
+        onClick={() => console.log("i am clicked")}
+      >
+        Click me
+      </button>
     );
-    const container = React.createElement("div", null, [h3, btn]);
+    const container = React.createElement("div", null, [Title, Button]);
     ReactDOM.render(container, root);
   </script>
 </html>
