#3.2 setState part Two

--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
     const root = document.getElementById("root");
 
     function App() {
-      const [counter, modifier] = React.useState(0);
-      // const data = React.useState(0);
+      const [counter, setCounter] = React.useState(0);
+      const onClick = () => {
+        // counter = counter + 1;
+        // console.log(counter);
+
+        setCounter(counter + 1); // ()안에 값으로 업데이트하고, 리렌더링한다.
+        // 위에 setCounter 코드 하나로 아래 2가지 코드가 실행된다.
+        // counter = 1004;
+        // ReactDOM.render(<App />, root);
+      };
+
       return (
         <div>
-          <h3>Total clicks : 0</h3>
-          <button>Click me</button>
+          <h3>Total clicks : {counter}</h3>
+          <button onClick={onClick}>Click me</button>
         </div>
       );
     }
