#4.0 Props : true false로 글씨크기 변경

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function Btn({ text }) {
+    function Btn({ text, big }) {
       // function Btn(props) {
+      console.log(text, big);
       return (
         <button
           style={{
@@ -17,6 +18,7 @@
             padding: "10px, 20px",
             border: 0,
             borderRadius: 10,
+            fontSize: big ? 18 : 10,
           }}
         >
           {/*{props.text}*/}
@@ -28,8 +30,8 @@
     function App() {
       return (
         <div>
-          <Btn text="Save Changes" />
-          <Btn text="Continue" />
+          <Btn text="Save Changes" big={true} />
+          <Btn text="Continue" big={false} />
         </div>
       );
     }
