--- a/index.html
+++ b/index.html
@@ -7,21 +7,30 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    const root = document.getElementById("root");
     function App() {
-      const [counter, setCounter] = React.useState(0);
-      const countUp = () => {
-        // setCounter에 함수 넣기
-        // setCounter( (현재value) 리턴=> 새로운 state );
-        setCounter((current) => current + 1);
-      };
+      const [minutes, setMinutes] = React.useState();
+      function onChange(event) {
+        setMinutes(event.target.value);
+      }
       return (
         <div>
-          <h3>Total Clicks: {counter}</h3>
-          <button onClick={countUp}>Click me!</button>
+          <h1>Super Converter</h1>
+          <label htmlFor="minutes">Minutes</label>
+          <input
+            value={minutes}
+            id="minutes"
+            placeholer="Minutes"
+            type="number"
+            onChange={onChange}
+          />
+          <h4>You want to convert {minutes}</h4>
+          <label htmlFor="hours">Hours</label>
+          <input id="hours" placeholer="Hours" type="number" />
         </div>
       );
     }
+
+    const root = document.getElementById("root");
     ReactDOM.render(<App />, root);
   </script>
 </html>
