--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script type="text/babel">
     function App() {
       const [amount, setAmount] = React.useState(0);
-      const [flipped, setFlipped] = React.useState(false);
+      const [inverted, setInverted] = React.useState(false);
       function onChange(event) {
         setAmount(event.target.value);
       }
@@ -18,7 +18,7 @@
       }
       function onFlip() {
         reset();
-        setFlipped((current) => !current);
+        setInverted((current) => !current);
       }
       return (
         <div>
@@ -26,31 +26,31 @@
           <div>
             <label htmlFor="amount">Minutes</label>
             <input
-              value={flipped ? amount * 60 : amount}
+              value={inverted ? amount * 60 : amount}
               id="amount"
               placeholer="Minutes"
               type="number"
               onChange={onChange}
-              // disabled={flipped ? true : false}
-              // disabled = {flipped === true}
-              disabled={flipped}
+              // disabled={inverted ? true : false}
+              // disabled = {inverted === true}
+              disabled={inverted}
             />
           </div>
           <div>
             <label htmlFor="hours">Hours</label>
             <input
-              value={flipped ? amount : Math.round(amount / 60)}
+              value={inverted ? amount : Math.round(amount / 60)}
               id="hours"
               placeholer="Hours"
               type="number"
-              // disabled={flipped ? false : true}
-              // disabled = {flipped === false}
-              disabled={!flipped}
+              // disabled={inverted ? false : true}
+              // disabled = {inverted === false}
+              disabled={!inverted}
               onChange={onChange}
             />
           </div>
           <button onClick={reset}>Reset</button>
-          <button onClick={onFlip}>Flipped</button>
+          <button onClick={onFlip}>{inverted ? "Turn back" : "Invert"}</button>
         </div>
       );
     }
